# rover_drive_controller

./: CMakeLists.txt  README.md  package.xml
config/: C5_E.eds  can.yaml  diff_drive_controller.yaml  drive_controller.yaml  joint_names_rover_drive_train.urdf.yaml  motor_driver.yaml  motor_test_controller.yaml  motor_test_driver.yaml  rover_controller.yaml  rover_driver.yaml
launch/: drive.launch  motor_test.launch  rover.launch  rover.launch.bkup
meshes/: back_left_wheel.STL  back_right_wheel.STL  base_link.STL  front_left_wheel.STL  front_right_wheel.STL  left_rocker.STL  right_rocker.STL
src/: drive.cpp
urdf/: minimal_rover.urdf.xacro  motor_test.urdf.xacro  rover.urdf.xacro  rover_drive_train.urdf
